[package]
name = "stge"
description = "Simple terminal game engine - stge"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3.3"
ctrlc = { version = "3.0", features = ["termination"] }
